--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@ Company.
     </div>
     <div style="text-align: center; padding-top: 15pt; padding-bottom: 10pt;
     ">
-        <p style="color: gray;">* see sample of my previous work </p>
-        <a class="btn" href="http://www.firstengineer-me.com/index.html">Sample Of My Work</a>
+        <p style="color: gray;">* see sample of my Application in webpage here  </p>
+        <a class="btn" href="http://www.firstengineer-me.com/1steng/">Sample Of My Work</a>
     </div>
    
     </div>
